--- a/MakeList.ipynb
+++ b/MakeList.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,15 @@
     "        self.message = message\n",
     "        super().__init__(self.message)\n",
     "\n",
-    "class MearaList:\n",
+    "class MakeList:\n",
     "    \n",
     "    def __init__(self):\n",
     "        self.size = 1\n",
     "        self.n = 0\n",
     "        self.A = self.__make_array(self.size)\n",
+    "    \n",
+    "    def __make_array(self,size):\n",
+    "        return (size*ctypes.py_object)()\n",
     "    \n",
     "    def __len__(self):\n",
     "        return self.n\n",
@@ -77,32 +80,31 @@
     "\n",
     "        self.A = B\n",
     "\n",
-    "    def __make_array(self,size):\n",
-    "        return (size*ctypes.py_object)()\n",
+    "\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "L = MearaList()"
+    "L = MakeList()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4"
+       "0"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Hello,100,True]\n"
+      "[Hello,3.4,100,True]\n"
      ]
     }
    ],
@@ -142,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +153,7 @@
        "'Hello'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
